--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "ical",
+  "name": "react-mobx-starter",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
-    "babel-plugin-styled-components": "^1.5.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "gh-pages": "^1.2.0",
+    "axios": "^0.18.0",    
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.5",
     "mobx-react-form": "^1.35.1",
@@ -31,6 +28,9 @@
     "deploy": "npm-run-all build pre-deploy"
   },
   "devDependencies": {
-    "react-app-rewired": "^1.5.2"
+    "react-app-rewired": "^1.5.2",
+    "babel-plugin-styled-components": "^1.5.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "gh-pages": "^1.2.0"
   }
 }
