--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-mobx-starter",
+  "homepage":"https://niradler.github.io/react-mobx-starter-project/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
